[gd_scene load_steps=18 format=2]

[ext_resource path="res://GUI/Unterface/Interface.gd" type="Script" id=1]
[ext_resource path="res://GUI/Unterface/TimeWarpButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://GUI/nasa_font_12.tres" type="FontFile" id=3]
[ext_resource path="res://GUI/Unterface/FunctionBuddons/CreatePlanet.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/Unterface/FunctionBuddons/DeletePlanet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Better Celestial Bodies/body.png" type="Texture2D" id=6]
[ext_resource path="res://GUI/Unterface/RightBar/Radius.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/Unterface/RightBar/Mass.tscn" type="PackedScene" id=8]
[ext_resource path="res://GUI/Unterface/RightBar/AngularVelocity.tscn" type="PackedScene" id=9]
[ext_resource path="res://GUI/Unterface/RightBar/Velocity.tscn" type="PackedScene" id=10]

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment() {
	vec4 new_color = texture(TEXTURE, UV);
	COLOR = vec4(new_color.r, new_color.g, new_color.b, new_color.a / 2.0);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ -60.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ -120.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:anchor_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.835 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:anchor_bottom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.835 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../RightPanel:anchor_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.7 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../RightPanel:anchor_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0.7 ]
}

[sub_resource type="Animation" id=7]
resource_name = "RightBarDown"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../RightPanel:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.75, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../RightPanel:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.75, 1.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "RightBarUp"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../RightPanel:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.75 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../RightPanel:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.75 ]
}

[sub_resource type="Animation" id=2]
resource_name = "SlideBarDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_bottom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.835, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_top")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 0.835, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "SlideBarUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.835 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.835 ]
}

[node name="Interface" type="CanvasLayer"]
layer = 9
script = ExtResource( 1 )

[node name="PlanetShadowNode" type="Node2D" parent="."]

[node name="PlanetShadow" type="Sprite2D" parent="PlanetShadowNode"]
visible = false
material = SubResource( 5 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SlideLowerBar")
reset_on_save = false
anims/RESET = SubResource( 1 )
anims/RightBarDown = SubResource( 7 )
anims/RightBarUp = SubResource( 6 )
anims/SlideBarDown = SubResource( 2 )
anims/SlideBarUp = SubResource( 3 )

[node name="SlideLowerBar" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 60.0
color = Color( 0.0784314, 0.0745098, 0.113725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlideBarElements" type="HBoxContainer" parent="SlideLowerBar"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parameters" type="HBoxContainer" parent="SlideLowerBar/SlideBarElements"]
offset_right = 800.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 800, 0 )
alignment = 1

[node name="Mass_label" type="Label" parent="SlideLowerBar/SlideBarElements/Parameters"]
offset_left = 122.0
offset_top = 12.0
offset_right = 170.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource( 3 )
text = "Mass = "

[node name="Mass" type="SpinBox" parent="SlideLowerBar/SlideBarElements/Parameters"]
offset_left = 174.0
offset_right = 324.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 150, 0 )
tooltip_text = "Sets the mass of created body"
min_value = 1.0
max_value = 1e+11
value = 100.0
suffix = "kg"

[node name="Radius_label" type="Label" parent="SlideLowerBar/SlideBarElements/Parameters"]
offset_left = 328.0
offset_top = 12.0
offset_right = 384.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource( 3 )
text = "Radius = "

[node name="Radius" type="SpinBox" parent="SlideLowerBar/SlideBarElements/Parameters"]
offset_left = 388.0
offset_right = 538.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 150, 0 )
min_value = 1.0
max_value = 500.0
value = 10.0
suffix = "m"

[node name="CheckButton" type="CheckButton" parent="SlideLowerBar/SlideBarElements/Parameters"]
offset_left = 542.0
offset_right = 678.0
offset_bottom = 40.0
focus_mode = 0
theme_override_fonts/font = ExtResource( 3 )
text = "Random:"

[node name="Options" type="HBoxContainer" parent="SlideLowerBar/SlideBarElements"]
offset_left = 804.0
offset_right = 1280.0
offset_bottom = 40.0
size_flags_horizontal = 3
alignment = 1

[node name="LowerBar" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
color = Color( 0.113725, 0.109804, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LowerBarElements" type="HBoxContainer" parent="LowerBar"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -20.0
offset_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeWarp" type="HBoxContainer" parent="LowerBar/LowerBarElements"]
offset_right = 400.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 400, 0 )
theme_override_constants/separation = 5
alignment = 1

[node name="TimeWarpButton2" parent="LowerBar/LowerBarElements/TimeWarp" instance=ExtResource( 2 )]
offset_left = 32.0
offset_right = 72.0
offset_bottom = 40.0
time_warp = "down"

[node name="TimeWarpButton" parent="LowerBar/LowerBarElements/TimeWarp" instance=ExtResource( 2 )]
offset_left = 77.0
offset_right = 117.0
offset_bottom = 40.0

[node name="TimeWarpButton3" parent="LowerBar/LowerBarElements/TimeWarp" instance=ExtResource( 2 )]
offset_left = 122.0
offset_right = 162.0
offset_bottom = 40.0
time_warp = "up"

[node name="TimeIndicator" type="ColorRect" parent="LowerBar/LowerBarElements/TimeWarp"]
offset_left = 167.0
offset_right = 367.0
offset_bottom = 40.0
custom_minimum_size = Vector2( 200, 0 )
size_flags_horizontal = 0
color = Color( 0.231373, 0.192157, 0.415686, 1 )

[node name="Label" type="Label" parent="LowerBar/LowerBarElements/TimeWarp/TimeIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource( 3 )
text = "1 s / second"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherButtons" type="HBoxContainer" parent="LowerBar/LowerBarElements"]
offset_left = 404.0
offset_right = 1280.0
offset_bottom = 40.0
size_flags_horizontal = 3
theme_override_constants/separation = 5
alignment = 1

[node name="CreatePlanet" parent="LowerBar/LowerBarElements/OtherButtons" instance=ExtResource( 4 )]
offset_left = 395.0
offset_right = 435.0
offset_bottom = 40.0

[node name="DeletePlanet" parent="LowerBar/LowerBarElements/OtherButtons" instance=ExtResource( 5 )]
offset_left = 440.0
offset_right = 480.0
offset_bottom = 40.0

[node name="RightPanel" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.8
offset_right = 300.0
color = Color( 0.113725, 0.109804, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightBarElements" type="VBoxContainer" parent="RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_right = -30.0
theme_override_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButtons" type="HBoxContainer" parent="RightPanel/RightBarElements"]
offset_right = 240.0
offset_bottom = 30.0
alignment = 2

[node name="Exit" type="Button" parent="RightPanel/RightBarElements/UpButtons"]
offset_left = 210.0
offset_right = 240.0
offset_bottom = 30.0
custom_minimum_size = Vector2( 30, 30 )
focus_mode = 0
text = "X"

[node name="ColorRect" type="ColorRect" parent="RightPanel/RightBarElements"]
offset_top = 40.0
offset_right = 240.0
offset_bottom = 190.0
custom_minimum_size = Vector2( 0, 150 )
color = Color( 0, 0, 0, 1 )

[node name="Mass" parent="RightPanel/RightBarElements" instance=ExtResource( 8 )]
offset_top = 200.0
offset_right = 240.0
offset_bottom = 224.0
alignment = 2

[node name="Label" parent="RightPanel/RightBarElements/Mass" index="0"]
offset_left = 38.0
offset_right = 86.0

[node name="SpinBox" parent="RightPanel/RightBarElements/Mass" index="1"]
offset_left = 90.0
offset_right = 240.0

[node name="Radius" parent="RightPanel/RightBarElements" instance=ExtResource( 7 )]
offset_top = 234.0
offset_right = 240.0
offset_bottom = 258.0
alignment = 2

[node name="AngularVelocity" parent="RightPanel/RightBarElements" instance=ExtResource( 9 )]
offset_top = 268.0
offset_right = 240.0
offset_bottom = 292.0
alignment = 2

[node name="Velocity" parent="RightPanel/RightBarElements" instance=ExtResource( 10 )]
offset_top = 302.0
offset_right = 240.0
offset_bottom = 326.0
alignment = 2

[connection signal="value_changed" from="SlideLowerBar/SlideBarElements/Parameters/Mass" to="." method="_on_Mass_value_changed"]
[connection signal="value_changed" from="SlideLowerBar/SlideBarElements/Parameters/Radius" to="." method="_on_Radius_value_changed"]
[connection signal="toggled" from="SlideLowerBar/SlideBarElements/Parameters/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="pressed" from="RightPanel/RightBarElements/UpButtons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="value_changed" from="RightPanel/RightBarElements/Mass/SpinBox" to="." method="_on_SpinBox_value_changed"]

[editable path="RightPanel/RightBarElements/Mass"]
